# HUB-NOSSO

./: .gitignore  COMO-USAR.md  GUIA-PROJETO.md  MUDANCAS.md  PASSO-A-PASSO.md  PLANO-NOVAS-FEATURES.md  README.md
.github/workflows/: ci.yml
hub-ue/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  start.sh
hub-ue/apps/hub/: README.md  pyproject.toml
hub-ue/apps/hub/src/biofeedback_hub/: __init__.py  auth.py  clock.py  config.py  main.py
hub-ue/apps/hub/src/biofeedback_hub/adapters/: __init__.py  base.py  simulator_eeg.py  simulator_hrv.py
hub-ue/apps/hub/src/biofeedback_hub/core/: __init__.py  broker.py  runtime.py  session_log.py
hub-ue/apps/hub/src/biofeedback_hub/schemas/: __init__.py  capture.py  envelope.py  topics.py
hub-ue/apps/hub/src/biofeedback_hub/tools/: __init__.py  command_client.py  doctor.py  experience_client.py  polarh10_client.py  sim_client.py  status_client.py
hub-ue/apps/hub/tests/: test_auth.py  test_broker.py  test_capture_schemas.py  test_command_client.py  test_cors.py  test_demo_scripts.py  test_doctor.py  test_envelope.py  test_runtime.py  test_session_log.py  test_sim_client.py  test_simulator_hrv.py  test_status_client.py
hub-ue/docs/: README.md  architecture.md  decisions-novas-features.md  project-handoff.md  protocol.md  sensor-quality.md  unreal-plugin-technical.md  unreal-project-integration.md  websocket-device-integration.md
polarh10_driver/: main.py
polarh10_driver/core/: control.py  recorder.py  websocket_gateway.py  websocket_gateway_dashboard.py
polarh10_driver/test/: test_control.py  (+2 more)
(+98 files in other folders)
